Criando ação no form para incluir novos repos

--- a/public/index.html
+++ b/public/index.html
@@ -21,21 +21,13 @@
           <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" />
           <strong>rocketseat.com.br</strong>
           <p>Tira sua idéia do papel e crie sua startup.</p>
-          <a
-            target="_blank"
-            href="http://github.com/rocketseat/rocketseat.com.br"
-            >Acessar</a
-          >
+          <a target="_blank" href="http://github.com/rocketseat/">Acessar</a>
         </li>
         <li>
           <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" />
           <strong>rocketseat.com.br</strong>
           <p>Tira sua idéia do papel e crie sua startup.</p>
-          <a
-            target="_blank"
-            href="http://github.com/rocketseat/rocketseat.com.br"
-            >Acessar</a
-          >
+          <a target="_blank" href="http://github.com/rocketseat/">Acessar</a>
         </li>
       </ul>
     </main>
