--- a/public/index.html
+++ b/public/index.html
@@ -16,20 +16,7 @@
         <input type="text" name="repository" />
         <button type="submit">Adicionar</button>
       </form>
-      <ul>
-        <li>
-          <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" />
-          <strong>rocketseat.com.br</strong>
-          <p>Tira sua idéia do papel e crie sua startup.</p>
-          <a target="_blank" href="http://github.com/rocketseat/">Acessar</a>
-        </li>
-        <li>
-          <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" />
-          <strong>rocketseat.com.br</strong>
-          <p>Tira sua idéia do papel e crie sua startup.</p>
-          <a target="_blank" href="http://github.com/rocketseat/">Acessar</a>
-        </li>
-      </ul>
+      <ul id="repo-list"></ul>
     </main>
     <!-- Optional JavaScript -->
     <script src="bundle.js"></script>
